@@ -5,7 +5,7 @@ import com.linkedin.common.GlobalTags;
 import com.linkedin.common.TagAssociationArray;
 import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.metadata.aspect.patch.template.ArrayMergingTemplate;
-import java.util.List;
+import java.util.Collections;
 import javax.annotation.Nonnull;
 
 public class GlobalTagsTemplate implements ArrayMergingTemplate<GlobalTags> {
@@ -38,12 +38,13 @@ public class GlobalTagsTemplate implements ArrayMergingTemplate<GlobalTags> {
   @Nonnull
   @Override
   public JsonNode transformFields(JsonNode baseNode) {
-    return arrayFieldToMap(baseNode, TAGS_FIELD_NAME, List.of(TAG_FIELD_NAME));
+    return arrayFieldToMap(baseNode, TAGS_FIELD_NAME, Collections.singletonList(TAG_FIELD_NAME));
   }
 
   @Nonnull
   @Override
   public JsonNode rebaseFields(JsonNode patched) {
-    return transformedMapToArray(patched, TAGS_FIELD_NAME, List.of(TAG_FIELD_NAME));
+    return transformedMapToArray(
+        patched, TAGS_FIELD_NAME, Collections.singletonList(TAG_FIELD_NAME));
   }
 }
